// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LastUpdated renders the LastUpdated component 1`] = `
<View
  style={
    Object {
      "marginTop": 20,
    }
  }
>
  <Link
    containerStyle={Object {}}
    href=""
    onPress={[Function]}
    style={Object {}}
  >
    <CentredText
      style={Object {}}
    >
      Last updated yesterday at 9:47 pm
    </CentredText>
  </Link>
</View>
`;

exports[`LastUpdated renders the LastUpdated component loading 1`] = `""`;

exports[`LastUpdated shows error when studyspace info is stale 1`] = `
<View
  style={
    Object {
      "marginTop": 20,
    }
  }
>
  <ErrorText
    containerStyle={
      Object {
        "marginBottom": 20,
      }
    }
    style={Object {}}
  >
    Our timetable data is stale. Sorry about that. We're working on getting this fixed as quickly as possible.
  </ErrorText>
  <Link
    containerStyle={Object {}}
    href=""
    onPress={[Function]}
    style={Object {}}
  >
    <CentredText
      style={Object {}}
    >
      Last updated yesterday at 7:47 pm
    </CentredText>
  </Link>
</View>
`;
